--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "mariadb": "^3.1.1",
+    "mysql": "^2.18.1",
     "mysql2": "^3.2.0",
-    "sequelize": "^6.30.0"
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.30.0",
+    "sequelize-typescript": "^2.1.5"
   },
   "devDependencies": {
-    "@types/node": "^18.15.10"
+    "@types/node": "^18.15.11",
+    "@types/validator": "^13.7.14"
   }
 }
